<resources>
    <string name="app_name">东海农业</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_settings_2">Settings_2</string>
    <string name="action_refresh">刷新</string>
    <string name="action_refresh_link">正在刷新连接状态</string>
    <string name="action_logout">退出当前账户</string>
    <string name="iconstr_monitor">节点监测</string>
    <string name="iconstr_control">自动控制</string>
    <string name="iconstr_history">追溯查询</string>
    <string name="iconstr_video">视频图像</string>
    <string name="iconstr_expert">专家系统</string>
    <string name="iconstr_info">信息发布</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="opennow">立即开启</string>
    <string name="timing">定时</string>
    <string name="trigger">触发</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="loghint">请输入登录名</string>
    <string name="pwdhint">请输入密码</string>
    <string name="btnText"></string>
    <string name="chkBoxText">记住密码？</string>
    <string name="title2">传感器网络</string>
    <string name="menu_setting">设置</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?\n您可在设置中主动检测更新。</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">不更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_check">检查更新</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="please_check_net">无法连接到互联网，请检查网络！</string>
    <string name="search">搜索</string>
    <string name="search_his_list_title">查询历史</string>
    <string name="building">正在开发</string>
    <string name="activity_diagnosefish">鱼病诊断</string>
    <string name="activity_selectfish">鱼病诊断</string>
	<string name="DemoInit">Demo initialization</string>
	<string name="DemoExit">Demo exit</string>
	<string name="SDKVersion">NetSDK Version: </string>
		<string name="login_mode_activity_title">Login Mode</string>
		<string name="login_mode_activity_info">Please select suitable environment: </string>
		<string name="login_mode_activity_ip">IP</string>
		<string name="login_mode_activity_p2p">P2P</string>
		<string name="p2p_activity_title">P2P Config</string>
		<string name="p2p_activity_ip">Server IP: </string>
		<string name="p2p_activity_port">Server Port: </string>
		<string name="p2p_activity_password">Password: </string>
		<string name="p2p_activity_dev_id">Device ID: </string>
		<string name="p2p_activity_dev_port">Device Port: </string>
		<string name="p2p_activity_config">Config</string>
		<string name="p2p_activity_autologin">Remember input</string>
		<string name="login_activity_title">Login</string>
		<string name="login_activity_ip">Device IP: </string>
		<string name="login_activity_port">Device Port: </string>
		<string name="login_activity_user">User Name: </string>
		<string name="login_activity_password">Password: </string>
		<string name="login_activity_login">Login</string>
		<string name="login_activity_login_success">Login success</string>
		<string name="login_activity_login_failed">Login failed</string>
		<string name="login_activity_autologin">Remember input</string>
		<string name="login_activity_port_err">Please check port</string>
			<string name="fun_activity_title">Functions</string>
			<string name="GlobalSetting">Global setting</string>
			<string name="MultiPlay">Multiple preview</string>
			<string name="RealPlay">Real play</string>
			<string name="Talk">Talk</string>
			<string name="FilePlayBack">Play back by record</string>
			<string name="TimePlayBack">Play back by time</string>
			<string name="PicPlayBack">Play back by pictures</string>
			<string name="Alarm">Alarm</string>
			<string name="UserMan">User management</string>
			<string name="DiskInfo">Disk information</string>
			<string name="RecordPlan">Record Plan</string>
			<string name="MotionDetect">Motion Detect</string>
			<string name="ShelterDetect">Shelter Detect</string>
			<string name="TestInterface">Interface testing</string>
			<string name="fun_alarm_out">Alarm Out</string>
			<string name="intelbrass">IntelBrass</string>
				<string name="global_setting_activity_title">Global setting</string>
				<string name="global_setting_activity_chn">Video channel: </string>
				<string name="global_setting_activity_pb_stream">Playback stream: </string>
				<string name="global_setting_activity_pb_stream_all">Main and Sub stream</string>
				<string name="global_setting_activity_pb_stream_main">Main stream</string>
				<string name="global_setting_activity_pb_stream_sub">Sub stream</string>
				<string name="multi_play_activity_title">Multiple play</string>
				<string name="multi_play_activity_info">Device not support multiple play</string>
				<string name="multi_play_activity_start">Start</string>
				<string name="multi_play_activity_stop">Stop</string>
				<string name="multi_play_activity_type_prm">Please select views</string>
				<string name="multi_play_activity_mp_1">1 view</string>
				<string name="multi_play_activity_mp_4">4 view</string>
				<string name="multi_play_activity_mp_8">8 view</string>
				<string name="multi_play_activity_mp_9">9 view</string>
				<string name="multi_play_activity_mp_16">16 view</string>
				<string name="multi_play_activity_mp_6">6 view</string>
				<string name="multi_play_activity_mp_12">12 view</string>
				<string name="multi_play_activity_mp_25">25 view</string>
				<string name="multi_play_activity_mp_36">36 view</string>
				<string name="multi_play_activity_chn_prm">Please select begin channel</string>
				<string name="live_activity_title">实时视频监控</string>
				<string name="live_activity_flash">Flash Ctrl</string>
				<string name="live_activity_ptz">PTZ</string>
				<string name="live_activity_start">StartRecord</string>
				<string name="live_activity_stop">StopRecord</string>
				<string name="live_activity_open_sound">Open sound</string>
				<string name="live_activity_close_sound">Close sound</string>
				<string name="live_activity_encode">Encoding</string>
				<string name="live_activity_capture">Snap</string>
				<string name="live_activity_volume">Volume</string>
				<string name="live_activity_quality">Quality</string>
				<string name="live_activity_speed_1">Speed: 1</string>
				<string name="live_activity_speed_2">Speed: 2</string>
				<string name="live_activity_speed_3">Speed: 3</string>
				<string name="live_activity_speed_4">Speed: 4</string>
				<string name="live_activity_speed_5">Speed: 5</string>
				<string name="live_activity_speed_6">Speed: 6</string>
				<string name="live_activity_speed_7">Speed: 7</string>
				<string name="live_activity_speed_8">Speed: 8</string>
					<string name="assistant_activity_title">Assistant function</string>
					<string name="flash_enable">Enable</string>
					<string name="live_activity_more">More</string>
					<string name="live_activity_Up">Up</string>
					<string name="live_activity_Left">Left</string>
					<string name="live_activity_Right">Right</string>
					<string name="live_activity_Down">D</string>
					<string name="live_activity_LUp">L-U</string>
					<string name="live_activity_RUp">R-U</string>
					<string name="live_activit_LDown">L-D</string>
					<string name="live_activity_RDown">R-D</string>
					<string name="live_activity_Speed">Speed</string>
					<string name="live_activity_z_add">Zoom+</string>
					<string name="live_activity_z_dec">Zoom-</string>
					<string name="live_activity_f_add">Focus+</string>
					<string name="live_activity_f_dec">Focus-</string>
					<string name="live_activity_a_add">Apert+</string>
					<string name="live_activity_a_dec">Apert-</string>
					<string name="live_activity_speed_prom">Choice PTZ Speed</string>
					<string name="encode_activity_title">Encode setting</string>
					<string name="encode_activity_mode">Encode Mode: </string>
					<string name="encode_activity_resolution">Resolution: </string>
					<string name="encode_activity_fps">Frame Rate(FPS): </string>
					<string name="encode_activity_bitrate">Bit Rate: </string>
					<string name="encode_activity_set">Setting</string>
					<string name="encode_activity_bitrate_ref">Reference Bit Rate: </string>
					<string name="quality_activity_bright">Brightness</string>
					<string name="quality_activity_contrast">Contrast</string>
					<string name="quality_activity_saturation">Saturation</string>
					<string name="quality_activity_huen">Huen</string>
				<string name="search_activity_title">Searching records</string>
				<string name="search_activity_search">Search</string>
					<string name="play_back_by_file_activity_title">Play back by file</string>
				<string name="play_back_by_time_activity_title">Play back by time</string>
				<string name="play_back_by_time_activity_start">Play Rec</string>
				<string name="play_back_by_pic_title">Play back by pictures</string>
				<string name="play_back_by_pic_play">Play Pic</string>
				<string name="play_back_by_pic_info_no_pic">No picture to show</string>
				<string name="talk_activity_title">Talk</string>
				<string name="CodeType">Code type: </string>
				<string name="StartTalk">Start</string>
				<string name="StopTalk">Stop</string>
				<string name="SpeakOnly">Speak only</string>
				<string name="alarm_activity_title">Alarm query and listen</string>
				<string name="alarm_activity_enable">Alarm enable</string>
				<string name="alarm_activity_external">External alarm</string>
				<string name="alarm_activity_lost">Video lost</string>
				<string name="alarm_activity_dynamic">Dynamic detect</string>
				<string name="alarm_activity_shelter">Shelter alarm</string>
				<string name="alarm_activity_static">Static alarm</string>
				<string name="alarm_activity_query">Query Alarm State</string>
				<string name="alarm_activity_start">Start listen</string>
				<string name="alarm_activity_stop">Stop listen</string>
				<string name="alarm_activity_alarm_in">Alarm in</string>
				<string name="alarm_activity_alarm_out">Alarm out</string>
				<string name="user_manager_title">User Management</string>
				<string name="user_manager_group">Group: </string>
				<string name="user_manager_user">User: </string>
				<string name="user_manager_right">Right: </string>
				<string name="user_manager_old_psw">Old PSW: </string>
				<string name="user_manager_new_psw">New PSW: </string>
				<string name="user_manager_conf_psw">Confirm PSW: </string>
				<string name="user_manager_modify_psw">Modify Password</string>
				<string name="user_manager_psw_dif">New password are not the same</string>
				<string name="disk_info_title">Disk Information</string>
				<string name="disk_info_name">Name: </string>
				<string name="disk_info_state">State: </string>
				<string name="disk_info_rest">Rest Cap: </string>
				<string name="disk_info_total">Total Cap: </string>
				<string name="disk_info_disk_name">Disk</string>
				<string name="disk_info_hiberation">Hiberation</string>
				<string name="disk_info_active">Active</string>
				<string name="disk_info_malfucntion">Malfucntion</string>
				<string name="record_plan_title">Record plan</string>
				<string name="record_plan_chn">Channel: </string>
				<string name="record_plan_pre_rec">PreRec(s): </string>
				<string name="record_plan_redundancy">Redundancy</string>
				<string name="record_plan_stream">Stream Type: </string>
				<string name="record_plan_day">Day of Week: </string>
				<string name="record_plan_seg">Seg in day: </string>
				<string name="record_plan_start">Start Time: </string>
</resources>