<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bk" >

    <RelativeLayout
        android:id="@+id/pwd_bar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/pwd_txt"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="密码："
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/pwdEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/pwd_txt"
            android:background="@drawable/edit_bk"
            android:hint="@string/pwdhint"
            android:textColor="@color/white"
            android:inputType="textPassword" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/name_bar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@id/pwd_bar"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="用户名："
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/logEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/name_txt"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/edit_bk"
            android:hint="@string/loghint"
            android:textColor="@color/white"
            android:inputType="textPersonName" >
        </EditText>
    </RelativeLayout>

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/pwd_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_login_select"
        android:text="@string/btnText"
        android:textColor="@color/white"
        android:visibility="gone" />

</RelativeLayout>